--- a/Tests/QGL_Input.UnitTests/QGL_Input.UnitTests.vcxproj
+++ b/Tests/QGL_Input.UnitTests/QGL_Input.UnitTests.vcxproj
@@ -290,6 +290,5 @@
     <None Include="QGL_Input.UnitTests_TemporaryKey.pfx" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
-  <ImportGroup Label="ExtensionTargets">
-  </ImportGroup>
+  <ImportGroup Label="ExtensionTargets" />
 </Project>
