--- a/Tests/QGL_Math.UnitTests/QGL_Math.UnitTests.vcxproj.filters
+++ b/Tests/QGL_Math.UnitTests/QGL_Math.UnitTests.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="math_func_tests.cpp">
       <Filter>Tests</Filter>
     </ClCompile>
+    <ClCompile Include="Tests\decimal_tests.cpp">
+      <Filter>Tests</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
