Add templates and some tests for BVH Tree

--- a/QGL_Physics/QGL_Physics.vcxproj
+++ b/QGL_Physics/QGL_Physics.vcxproj
@@ -167,9 +167,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="include\Collision\QGLCollision.h" />
     <ClInclude Include="include\Collision\qgl_bounding.h" />
-    <ClInclude Include="include\Collision\qgl_bvh_tree.h" />
+    <ClInclude Include="include\Collision\qgl_bvh_tree_builder.h" />
+    <ClInclude Include="include\Collision\qgl_collision_adapters.h" />
+    <ClInclude Include="include\Collision\qgl_static_bvh_tree.h" />
     <ClInclude Include="include\qgl_physics_include.h" />
     <ClInclude Include="include\Rigid-Bodies\QGLRigidBody.h" />
     <ClInclude Include="include\Rigid-Bodies\qgl_rb_integration.h" />
