--- a/Tests/QGL_Physics.UnitTests/QGL_Physics.UnitTests.vcxproj.filters
+++ b/Tests/QGL_Physics.UnitTests/QGL_Physics.UnitTests.vcxproj.filters
@@ -18,7 +18,7 @@
   <ItemGroup>
     <ClCompile Include="UnitTestApp.xaml.cpp" />
     <ClCompile Include="pch.cpp" />
-    <ClCompile Include="bvh_tree_tests.cpp">
+    <ClCompile Include="static_bvh_tree_tests.cpp">
       <Filter>Tests</Filter>
     </ClCompile>
   </ItemGroup>
