--- a/QGL_Physics/QGL_Physics.vcxproj.filters
+++ b/QGL_Physics/QGL_Physics.vcxproj.filters
@@ -65,13 +65,7 @@
     <ClInclude Include="include\World\qgl_world_properties.h">
       <Filter>Header Files\World</Filter>
     </ClInclude>
-    <ClInclude Include="include\Collision\qgl_bvh_tree.h">
-      <Filter>Header Files\Collision</Filter>
-    </ClInclude>
     <ClInclude Include="include\Collision\qgl_bounding.h">
-      <Filter>Header Files\Collision</Filter>
-    </ClInclude>
-    <ClInclude Include="include\Collision\QGLCollision.h">
       <Filter>Header Files\Collision</Filter>
     </ClInclude>
     <ClInclude Include="include\Rigid-Bodies\QGLRigidBody.h">
@@ -79,6 +73,15 @@
     </ClInclude>
     <ClInclude Include="include\World\QGLWorld.h">
       <Filter>Header Files\World</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Collision\qgl_static_bvh_tree.h">
+      <Filter>Header Files\Collision</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Collision\qgl_collision_adapters.h">
+      <Filter>Header Files\Collision</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Collision\qgl_bvh_tree_builder.h">
+      <Filter>Header Files\Collision</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
