--- a/Tests/QGL_Physics.UnitTests/QGL_Physics.UnitTests.vcxproj
+++ b/Tests/QGL_Physics.UnitTests/QGL_Physics.UnitTests.vcxproj
@@ -269,7 +269,7 @@
     <Image Include="Assets\Wide310x150Logo.scale-200.png" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="bvh_tree_tests.cpp" />
+    <ClCompile Include="static_bvh_tree_tests.cpp" />
     <ClCompile Include="UnitTestApp.xaml.cpp">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
     </ClCompile>
