--- a/Tests/QGL_Math.UnitTests/QGL_Math.UnitTests.vcxproj.filters
+++ b/Tests/QGL_Math.UnitTests/QGL_Math.UnitTests.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="boundary_tests.cpp">
       <Filter>Tests</Filter>
     </ClCompile>
+    <ClCompile Include="Tests\tile_helper_tests.cpp">
+      <Filter>Tests</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
